// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of a table header row 1`] = `
<tr
  className=""
/>
`;

exports[`Table header row that allows selection 1`] = `
<tr
  className=""
>
  <th
    className="table-heading-cell table-checkbox-cell"
  >
    <div
      className="pretty p-icon"
    >
      <input
        type="checkbox"
      />
      <div
        className="state p-info"
      >
        <i
          className="icon fal fa-check"
        />
        <label />
      </div>
    </div>
  </th>
</tr>
`;

exports[`Table header row with a custom header class 1`] = `
<tr
  className=""
/>
`;

exports[`Table header row with a custom row class 1`] = `
<tr
  className="foo"
/>
`;

exports[`Table header row with an expandable header cell 1`] = `
<tr
  className=""
>
  <th
    className="table-heading-cell table-expand-cell"
  />
</tr>
`;

exports[`Table header row with ascending sort 1`] = `
<tr
  className=""
>
  <th
    className="table-heading-cell"
  >
    <div
      className="apm-cursor-p"
      onClick={[Function]}
    >
      Foo
       
      <i
        className="fas fa-sort-up"
      />
    </div>
  </th>
</tr>
`;

exports[`Table header row with descending sort 1`] = `
<tr
  className=""
>
  <th
    className="table-heading-cell"
  >
    <div
      className="apm-cursor-p"
      onClick={[Function]}
    >
      Foo
       
      <i
        className="fas fa-sort-down"
      />
    </div>
  </th>
</tr>
`;

exports[`Table header row with extra column header cells 1`] = `
<tr
  className=""
>
  <th />
  <th />
</tr>
`;

exports[`Table header row with header cells 1`] = `
<tr
  className=""
>
  <th
    className="table-heading-cell"
  >
    <div
      className="apm-cursor-p"
      onClick={[Function]}
    >
      Foo
       
    </div>
  </th>
  <th
    className="table-heading-cell"
  >
    <div
      className="apm-cursor-p"
      onClick={[Function]}
    >
      Bar
       
    </div>
  </th>
</tr>
`;
